fix: layout bug

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,7 +18,7 @@
 
 html,body {
   width :100%;
-  font-size:90%;
+  font-size:95%;
   color: $themeFontColor;
   font-family: $fontBase;
   letter-spacing: 1.5px;
